// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> Default story renders snapshot 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary euetd0b1 css-1yhbxxx-MuiButtonBase-root-MuiButton-root"
  data-style="minimal"
  tabindex="0"
  type="button"
>
  Open 
  m
  <span
    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 1`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e1761de60 css-1l4u3yo-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id="_r_1_"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium ets5mbj0 epxivg20 css-y9cgah-MuiButtonBase-root-MuiIconButton-root"
    icon="XMark"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1obf64m eo7r9jx1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium eo7r9jx0 css-hx3qru-MuiSvgIcon-root"
        data-file-name="IconXMarkSmall"
        data-testid="IconXMarkSmall"
        fillcontrast="white"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de63 css-si6ena-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de61 css-15h1tef-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de62 css-ho2ab9-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 2`] = `
<div
  class="MuiDialogContent-root e1exhoft0 css-1vffu00-MuiDialogContent-root"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 3`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing ew8rywf0 css-1flwc3z-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary euetd0b0 css-1q30me-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary euetd0b0 css-5d6wyh-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 4`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e1761de60 css-1l4u3yo-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id="_r_2_"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium ets5mbj0 epxivg20 css-1y7g6x5-MuiButtonBase-root-MuiIconButton-root"
    icon="XMark"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1obf64m eo7r9jx1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium eo7r9jx0 css-hx3qru-MuiSvgIcon-root"
        data-file-name="IconXMarkLarge"
        data-testid="IconXMarkLarge"
        fillcontrast="white"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de63 css-si6ena-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de61 css-15h1tef-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de62 css-ho2ab9-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 5`] = `
<div
  class="MuiDialogContent-root e1exhoft0 css-1vffu00-MuiDialogContent-root"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 6`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing ew8rywf0 css-1flwc3z-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary euetd0b0 css-1q30me-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary euetd0b0 css-5d6wyh-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 7`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e1761de60 css-1l4u3yo-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id="_r_3_"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium ets5mbj0 epxivg20 css-1niivss-MuiButtonBase-root-MuiIconButton-root"
    icon="XMark"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1obf64m eo7r9jx1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium eo7r9jx0 css-hx3qru-MuiSvgIcon-root"
        data-file-name="IconXMarkLarge"
        data-testid="IconXMarkLarge"
        fillcontrast="white"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de63 css-si6ena-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de61 css-15h1tef-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de62 css-ho2ab9-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 8`] = `
<div
  class="MuiDialogContent-root e1exhoft0 css-1vffu00-MuiDialogContent-root"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 9`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing ew8rywf0 css-1flwc3z-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary euetd0b0 css-1q30me-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary euetd0b0 css-5d6wyh-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 10`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e1761de60 css-1l4u3yo-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id="_r_4_"
>
  <button
    aria-label="Close"
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium ets5mbj0 epxivg20 css-1niivss-MuiButtonBase-root-MuiIconButton-root"
    icon="XMark"
    tabindex="0"
    type="button"
  >
    <div
      class="css-1obf64m eo7r9jx1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium eo7r9jx0 css-hx3qru-MuiSvgIcon-root"
        data-file-name="IconXMarkLarge"
        data-testid="IconXMarkLarge"
        fillcontrast="white"
        focusable="false"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      />
    </div>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de63 css-si6ena-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de61 css-15h1tef-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de62 css-ho2ab9-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 11`] = `
<div
  class="MuiDialogContent-root e1exhoft0 css-1vffu00-MuiDialogContent-root"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 12`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing ew8rywf0 css-1flwc3z-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary euetd0b0 css-1q30me-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary euetd0b0 css-5d6wyh-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> renders Dialog left positioned buttons 1`] = `
<div
  class="MuiDialogActions-root MuiDialogActions-spacing ew8rywf0 css-1vu9d4n-MuiDialogActions-root"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary euetd0b0 css-5d6wyh-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Primary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary euetd0b0 css-1q30me-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    Secondary Action
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> renders Dialog without title X button 1`] = `
<h2
  class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root e1761de60 css-1l4u3yo-MuiTypography-root-MuiDialogTitle-root"
  data-testid="dialog-title"
  id="_r_5_"
>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de63 css-si6ena-MuiTypography-root"
  >
    Optional Overline
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de61 css-15h1tef-MuiTypography-root"
  >
    Title
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1 e1761de62 css-ho2ab9-MuiTypography-root"
  >
    Optional Subtitle
  </p>
</h2>
`;
